// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActivityIndicator /> should render as <ActivityIndicator> when mocked 1`] = `
<ActivityIndicator
  animating={true}
  color="#0000ff"
  hidesWhenStopped={true}
  size="large"
/>
`;

exports[`<ActivityIndicator /> should render as <View> when not mocked 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RCTActivityIndicatorView
    animating={true}
    color="#0000ff"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
  />
</View>
`;

exports[`<ActivityIndicator /> should shallow render as <ActivityIndicator> when mocked 1`] = `
<ActivityIndicator
  animating={true}
  color="#0000ff"
  hidesWhenStopped={true}
  size="large"
/>
`;

exports[`<ActivityIndicator /> should shallow render as <ForwardRef(ActivityIndicator)> when not mocked 1`] = `
<ForwardRef(ActivityIndicator)
  animating={true}
  color="#0000ff"
  hidesWhenStopped={true}
  size="large"
/>
`;
